Fixed landing page spacing

--- a/style.css
+++ b/style.css
@@ -136,10 +136,6 @@ p {
   }
 }
 
-.spacer {
-  flex: 1;
-}
-
 /* =======================================================
    Banner Section
 ======================================================= */
